fix z-index

--- a/src/components/landing/animation/animation-style.css
+++ b/src/components/landing/animation/animation-style.css
@@ -1,5 +1,5 @@
 #landing-animation-layout {
-  @apply absolute z-50 top-0 bottom-0 right-0 left-0 overflow-hidden
+  @apply absolute z-40 top-0 bottom-0 right-0 left-0 overflow-hidden
 }
 
 @media (max-width:1280px) {
